# tapciify-gui

./: index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: release.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs
src-tauri/src/routes/: mod.rs
src-tauri/src/routes/api/: mod.rs
src-tauri/src/routes/api/v1/: convert.rs  convert_raw.rs  mod.rs  query.rs  utils.rs
src/lib/: api.ts
