[package]
name = "tapciify-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tapciify = { version = "2", features = ["parallelism"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
