[package]
name = "tapciify-gui"
version = "0.1.1"
description = "Convert your images to ASCII art"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
repository = "https://github.com/tapciify/tapciify-gui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "http-multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }
image = "0.24"
tapciify = { version = "3", default-features = false, features = [
    "parallelism",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
portpicker = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
